add optional skills w generic skill feature

--- a/src/app/pages/user/home-user/home-user.component.html
+++ b/src/app/pages/user/home-user/home-user.component.html
@@ -148,16 +148,20 @@
         <div class="card-body">
           <h3>Habilidades</h3>
           
+          <p class="card bg-danger p-3 text-white">
+            Si su comercio no requiere de habilidades y prefiere utilizar una sóla línea de turnos puede deshabilitar 
+            la opcion haciendo click en Habilidades Activadas para deshabilitar esta opción.
+          </p>
           <p>
             Los skills o habilidades son segmentos que cada asistente esta capacitado para atender. Los crea aquí pero
-            se asignan a los usuarios al momento de crear un asistente. Un asistente que tiene asignados los skills de,
-            por ejemplo,
-            "Ventas" sólo recibira en su escritorio turnos de "Ventas".
+            se asignan a los usuarios.
           </p>
           <hr>
           <p>
-            También debe especificar un prefijo que tenga sentido semantico con la habilidad por ejemplo para Ventas
-            el prefijo puede ser V, de modo que su cliente vera los turnos de ventas como V1, V2, V3, etc.
+            El prefijo de la habilidad es una abreviatura de su nombre. Por ejemplo para la habilidad de "Pediatría" 
+            el prefijo puede ser P, de este modo su cliente vera los turnos como P1, P2, etc.
+
+
           </p>
           <div class="row mx-2 mt-4" style="justify-content: space-between;">
             <button class="btn btn-danger col-5" matStepperPrevious> Volver </button>
