rplace user by admin, auto attach n remove skills to admin

--- a/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
+++ b/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
@@ -4,7 +4,7 @@
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Rol</mat-label>
         <mat-select formControlName="rol" name="rol" required>
-            <mat-option value="USER_ROLE"> Administrador y Asistente</mat-option>
+            <mat-option value="ADMIN_ROLE"> Administrador y Asistente</mat-option>
             <mat-option value="ASSISTANT_ROLE"> Asistente </mat-option>
         </mat-select>
     </mat-form-field>
