--- a/src/app/pages/admin/assistants/assistants.component.html
+++ b/src/app/pages/admin/assistants/assistants.component.html
@@ -14,7 +14,7 @@
                         </span>
                     </td>
                     <td>
-                        <span *ngIf="assistant.id_role==='USER_ROLE'">
+                        <span *ngIf="assistant.id_role==='ADMIN_ROLE'">
                             <mat-icon class="ml-2 list-crud-star">star</mat-icon>
                         </span>
                     </td>
