--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -44,7 +44,7 @@
             </div>
 
         </mat-expansion-panel>
-        <!-- *ngIf="userService.user?.id_role === 'USER_ROLE'" -->
+        <!-- *ngIf="userService.user?.id_role === 'ADMIN_ROLE'" -->
 
         <!-- ASSISTANT / USER -->
         <div *ngFor="let item of userService.menu">
