--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -80,11 +80,13 @@
     <!-- NO SKILLS -->
     <!-- ======================================================== -->
 
-    <div class="card bg-danger text-warning p-3 mb-4" style="min-width: 18rem; max-width: 30rem;"
+    <div class="card bg-danger text-white p-3 mb-4" style="min-width: 18rem; max-width: 30rem;"
       *ngIf="skillsAssistantThisCompany.length === 0">
-      <p class="lead">
-        Usted no tiene habilidades asignadas. Puede asignarse habilidades
-        editando su usuario desde "Asistentes" del menú de Usuario.
+      <p>
+        Usted no tiene habilidades asignadas. Debe ir al administrador de asistentes, luego seleccionar el asistente 
+        y allí asignarle skills / habilidades.
+
+        <button class="btn btn-danger btn-block btn-sm my-2" [routerLink]="['/admin/assistants']">ADMINISTRADOR DE ASISTENTES</button>
       </p>
     </div>
 
