--- a/src/app/pages/assistant/home/home.component.html
+++ b/src/app/pages/assistant/home/home.component.html
@@ -10,17 +10,15 @@
             <p class="lead">Bienvenido, desde aquí puede tomar escritorios y atender turnos.</p>
 
             <!-- no company -->
-            <div *ngIf="!userService.user.id_company" class="card lead bg-danger text-warning p-3 my-4"
+            <div *ngIf="!userService.user.id_company" class="card lead bg-danger text-white p-3 my-4"
                 style="line-height: initial;">
-                No tiene asignada ningúna empresa. Debe seleccionarla desde el menú prinicpal. Si no tiene empresas
-                creadas
-                debe crearlas desde el menú de "Usuario".
+                No tiene asignada ningúna empresa. Debe seleccionarla desde el menú prinicipal.
             </div>
 
             <!-- no desktops -->
-            <div *ngIf="desktops?.length === 0" class="card lead bg-danger text-warning p-3 my-4"
+            <div *ngIf="desktops?.length === 0" class="card lead bg-danger text-white p-3 my-4"
                 style="line-height: initial;">
-                No tiene escritorios creados. Debe darlos de alta desde el Menú de Usuario.
+                No tiene escritorios creados. Debe darlos de alta desde el Menú de Administrador.
             </div>
 
             <div *ngIf="desktops?.length > 0 && userService.user.id_company?._id">
