fix add remove skills in ls, auto attach company, remove skills selector on admin edit form

--- a/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
+++ b/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
@@ -41,7 +41,7 @@
             placeholder="Confirma contraseña" autocomplete="new-password">
     </mat-form-field>
 
-    <div class="card mb-4">
+    <div class="card mb-4" *ngIf="assistantEdit?.id_role ==='ASSISTANT_ROLE' && !skills[0].bl_generic">
         <div class="card-header">SKILLS</div>
         <div class="card-body">
             <mat-selection-list [ngModelOptions]="{standalone: true}" [(ngModel)]="selStrSkills">
