--- a/src/app/pages/admin/home/home.component.html
+++ b/src/app/pages/admin/home/home.component.html
@@ -241,11 +241,13 @@
           </div>
           <div *ngIf="activateAssistantExplanation" class="animated fadeIn">
             <p>
-              Usted como usuario puede atender turnos desde el menú de Asistentes. Sin embargo puede
-              opcionalmente crear otros usuarios con rol de asistente para la tarea de atender turnos.
+              Usted como usuario administrador puede atender turnos desde el menú de Asistentes. Sin embargo puede
+              opcionalmente crear otros usuarios con rol de asistente para esa tarea.
             </p>
             <p>
-              Si fueron creadas habilidades deberá asignarle a cada asistente las habilidades que le correspondan.
+              Si fueron creadas habilidades, su cuenta de usuario con rol de administrador ya tiene asignadas todas 
+              las habilidades. Sin embargo si desea crear asistentes debera asignarle a cada asistente las 
+              habilidades que le correspondan.
             </p>
             <p>
               Tenga en cuenta que los asistentes que usted puede crear aquí, deben ingresar a sus cuentas desde el mismo login
